fixed layout issue

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -3,30 +3,30 @@
     padding: 0;
     box-sizing: border-box;
 }
-  body{ 
-    background-image:url(./brick\ background.jpg) ;
-    margin: 0;
+
+body {
+    background-image: url(./brick\ background.jpg);
 
 }
 
 header {
-       width: 100%;
+    width: 100%;
     height: 15rem;
     display: flex;
     justify-content: space-between;
     background-image: url(./abstract-dark-wood-lo-2560x1440.jpg);
     border-bottom: solid 10px brown;
-    
-    
+
+
 
 }
 
 header h1 {
     width: 30%;
     font-family: 'Smythe', cursive;
-    font-size: 5rem ;
+    font-size: 5rem;
     color: gold;
-   
+
 
 }
 
@@ -35,7 +35,7 @@ header h1 {
 nav {
     width: 60%;
     font-family: 'Smythe', cursive;
-    
+
 
 }
 
@@ -47,10 +47,10 @@ ul {
     width: 100%;
     font-size: 3rem;
     padding-top: 1%;
-    
+
 }
 
-a{
+a {
     color: bisque;
 
 }
@@ -58,7 +58,7 @@ a{
 main {
     padding: 5%;
     margin: 5%;
-    
+
 }
 
 .container {
@@ -88,16 +88,15 @@ main {
 
 #about div {
     width: 30%
-
 }
 
-h2{
-    /* margin-left: 5rem; */
+h2 {
+    margin-left: 3rem;
 }
 
-img{
-   /* margin-top: 17%; */
-   margin-bottom: 0px;
+img {
+    margin: 3rem;
+    margin-bottom: 0;
     border: solid 10px brown;
     border-radius: 2rem;
 }
@@ -142,7 +141,7 @@ p {
 
 .project a img {
     width: 95%;
-    height:90% ;
+    height: 90%;
 }
 
 
